# SemestrDatabaseWork

./: .env.example  .gitignore  Dockerfile.airflow  README.md  docker-compose.yaml  main.py  pyproject.toml
config/: config.py
dags/: config.py  etl_pipeline.py  extaract.py  extract.py  load.py  requirements.txt
dags/utils/: data_transformers.py  data_utils.py  scheduler_utils.py  spark_df_schemas.py
dags/utils/database/: db_core.py  dwh_tables_scheamas.py  dwh_tables_schemas.py  repositories.py
database/: db_config.py  documents.py  repository.py
database_insert_pipeline/: config.yaml  data_loader.py  generate_data.py  insert_config.py  insert_script.py  load_data.py  main.py  normalize_data.py  prepare_data.py
database_insert_pipeline/mongodb/: db_config.py  repository.py
notebooks/: refacror_flight.ipynb  refactor_aircrafts.ipynb  refactor_airlines.ipynb  refactor_airports.ipynb  refactor_fare_condition.ipynb  refactor_passenger.ipynb  refactor_schedule.ipynb  refactor_tickets.ipynb
src/: main.py  schemas.py
src/database/: config.py  documents.py  repository.py
src/database/documents/: aircrafts.py  aircrafts_document.py  airline.py  airline_document.py  airport.py  airport_document.py  flight.py  flight_document.py  passenger.py  passenger_document.py  person.py  runway.py  runway_document.py  schedule.py  schedule_document.py  seatclasses.py  seatclasses_document.py  status.py  status_document.py  ticket.py  ticket_document.py  weather.py  weather_document.py
src/database_insert_pipeline/: load_data.py
src/server/: schemas.py
src/utils/: data_utils.py  spark_df_schemas.py
staging_area/: data_transformers.py  data_workers.py  extract_data.py  spark_df_schemas.py
ytsaurus/: YTsaurus_cluster.yaml  init.sh  start_YTsaurus.sh  stop_YTsaurus.sh
