[tool.poetry]
name = "семестровая по хд"
version = "0.1.0"
description = "Semestr work on databasr course"
authors = ["Ivan Svyatykh <zlativansvyat@mail.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.115.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
