[tool.poetry]
name = "семестровая по хд"
version = "0.1.0"
description = "Semestr work on databasr course"
authors = ["Ivan Svyatykh <zlativansvyat@mail.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.115.0"}
pymongo = "^4.10.1"
mongoengine = "^0.29.1"
pandas = "^2.2.3"
pyyaml = "^6.0.2"
black = "^24.10.0"
tqdm = "^4.66.5"
rstr = "^3.2.2"
matplotlib = "^3.9.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
