[tool.poetry]
name = "семестровая по хд"
version = "0.1.0"
description = "Semestr work on databasr course"
authors = ["Ivan Svyatykh <zlativansvyat@mail.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pymongo = {extras = ["srv"], version = "^4.10.1"}
mongoengine = "^0.29.1"
pandas = "^2.2.3"
pyyaml = "^6.0.2"
black = "^24.10.0"
tqdm = "^4.66.5"
rstr = "^3.2.2"
pyspark = {extras = ["sql"], version = "^3.5.3"}
python-dotenv = "^1.0.1"
pydantic = "^2.9.2"
undetected-chromedriver = "^3.5.5"
setuptools = "^75.5.0"
pyarrow = "^18.0.0"
grpcio = "^1.67.1"
protobuf = "^5.28.3"
grpcio-status = "^1.67.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
